--- a/frontend/src/recipe/create/styles/containers.css
+++ b/frontend/src/recipe/create/styles/containers.css
@@ -2,8 +2,7 @@
 #yeast-container,
 #honey-container,
 #addons-container,
-#recipe-name-container,
-#recipe-description-container{
+#recipe-name-container {
 	padding: 1rem;
 	display: flex;
 	gap: 1rem;
@@ -11,6 +10,14 @@
 	justify-content: center;
 	width: 100%;
 	max-width: 1000px;
+}
+
+#recipe-description-container {
+	padding: 1rem;
+}
+
+.w-md-editor-toolbar, .wmde-markdown, .wmde-markdown-color {
+    background: var(--background);
 }
 
 #yeast-container > div {
