--- a/frontend/src/recipe/create/styles/containers.css
+++ b/frontend/src/recipe/create/styles/containers.css
@@ -2,7 +2,8 @@
 #yeast-container,
 #honey-container,
 #addons-container,
-#recipe-name-container {
+#recipe-name-container,
+#chemicals-container {
 	padding: 1rem;
 	display: flex;
 	gap: 1rem;
