--- a/frontend/src/global_styles/index.css
+++ b/frontend/src/global_styles/index.css
@@ -1,6 +1,7 @@
 :root {
 	/* css variables */
 	--background: #121212;
+	--background-secondary: #1e1e1e;
 	--highlight: #db4105;
 	--highlight-secondary: #ff6d00;
 }
