added sign in with google button and fixed styles

--- a/frontend/src/header/styles/header.css
+++ b/frontend/src/header/styles/header.css
@@ -8,6 +8,10 @@
 	border-radius: 2px;
 }
 
+#header-container > div:nth-child(5) > div > span {
+	background: none; 
+}
+
 @media (max-width: 600px) {
 	#header-container {
 		flex-direction: column;
