added recipe size and recipe size unit

--- a/frontend/src/components/recipe/create/styles/containers.css
+++ b/frontend/src/components/recipe/create/styles/containers.css
@@ -3,7 +3,8 @@
 #honey-container,
 #addons-container,
 #recipe-name-container,
-#chemicals-container {
+#chemicals-container,
+#recipe-size-container {
 	padding: 1rem;
 	display: flex;
 	gap: 1rem;
