--- a/frontend/src/global_styles/input.css
+++ b/frontend/src/global_styles/input.css
@@ -1,4 +1,4 @@
-input[type="text"], textarea {
+input[type="text"], input[type="number"], textarea {
 	width: 100%;
 	padding: 12px 20px;
 	margin: 8px 0;
