--- a/frontend/src/components/header/styles/header.css
+++ b/frontend/src/components/header/styles/header.css
@@ -1,20 +1,37 @@
 #header-container {
 	display: flex;
-	align-items: center;
-	justify-content: space-between;
-	margin: 1rem;
-	padding: 1rem;
+	padding: 1.5rem;
 	background: var(--background-secondary);
 	border-radius: 2px;
 }
 
-#header-container > div:nth-child(5) > div > span {
-	background: none; 
-}
-
 @media (max-width: 600px) {
-	#header-container {
+	#header-rest-container, #header-container {
 		flex-direction: column;
 		gap: 1rem;
+		align-items: center;
+		justify-content: center;
 	}
+	
+}
+
+#header-rest-container {
+	background: var(--background-secondary);
+	display: flex;
+	align-items: center;
+	justify-content: space-evenly;
+	width: 100%;
+}
+
+#header-rest-container > * {
+	background: var(--background-secondary);
+}
+
+#header-logo-container, #header-logo-container > * {
+	background: var(--background-secondary);
+	text-decoration: none;
+}
+
+#header-rest-container > * {
+	text-decoration: none;
 }
