--- a/frontend/src/components/header/styles/header.css
+++ b/frontend/src/components/header/styles/header.css
@@ -5,14 +5,14 @@
 	border-radius: 2px;
 }
 
-@media (max-width: 600px) {
-	#header-rest-container, #header-container {
+@media (max-width: 800px) {
+	#header-rest-container,
+	#header-container {
 		flex-direction: column;
 		gap: 1rem;
 		align-items: center;
 		justify-content: center;
 	}
-	
 }
 
 #header-rest-container {
@@ -38,8 +38,8 @@
 	justify-content: space-center;
 }
 
-
-#header-logo-container, #header-logo-container > * {
+#header-logo-container,
+#header-logo-container > * {
 	background: var(--background-secondary);
 	text-decoration: none;
 }
