title styles for dashboard

--- a/frontend/src/components/dashboard/styles/dashboard.css
+++ b/frontend/src/components/dashboard/styles/dashboard.css
@@ -73,7 +73,7 @@
 	align-items: center;
 	justify-content: center;
 	flex-direction: column;
-    max-width: 200px;
+	max-width: 200px;
 }
 
 @media (max-width: 800px) {
@@ -81,10 +81,15 @@
 		flex-direction: column;
 	}
 	.dashboard-delete-recipe {
-        max-width: 100%;
+		max-width: 100%;
 		margin-top: 1rem;
 	}
 	.dashboard-recipe-left {
 		align-items: center;
 	}
+}
+
+#dashboard-title {
+	text-align: center;
+	margin-bottom: 1rem;
 }
