--- a/frontend/src/components/batch/view/styles/view.css
+++ b/frontend/src/components/batch/view/styles/view.css
@@ -49,3 +49,13 @@
 	font-size: 1.5rem;
 	font-weight: bold;
 }
+#updates-title,
+#batch-created-title {
+	text-align: center;
+}
+#view-batch-container {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-direction: column;
+}
