create batch form works with batch view

--- a/frontend/src/components/dashboard/styles/dashboard.css
+++ b/frontend/src/components/dashboard/styles/dashboard.css
@@ -93,3 +93,8 @@
 	text-align: center;
 	margin-bottom: 1rem;
 }
+
+.create-batch-button {
+	background: var(--background);
+	border-radius: 0.5rem;
+}
