--- a/frontend/src/components/dashboard/styles/dashboard.css
+++ b/frontend/src/components/dashboard/styles/dashboard.css
@@ -8,6 +8,14 @@
 	flex-direction: column;
 }
 
+#dashboard button {
+	width: 160px;
+}
+
+#dashboard #delete-cancel, #dashboard #delete-confirm {
+	width: 100px;
+}
+
 @media (min-width: 1000px) {
 	#dashboard {
 		display: flex;
@@ -21,7 +29,8 @@
 	}
 }
 
-#dashboard-recipes-container > * {
+#dashboard-recipes-container > *,
+#dashboard-batches-container {
 	width: 100%;
 	max-width: 1000px;
 }
@@ -68,7 +77,8 @@
 	top: 0;
 }
 
-.dashboard-delete-recipe {
+.dashboard-delete-recipe,
+.dashboard-delete-batch {
 	display: flex;
 	align-items: center;
 	justify-content: center;
@@ -76,11 +86,24 @@
 	max-width: 200px;
 }
 
+.dashboard-delete-batch > *,
+.dashboard-delete-recipe > * > *,
+.dashboard-delete-recipe > * > * > *,
+.dashboard-delete-recipe > * > * > * > * {
+	background: var(--background-secondary);
+}
+
+.text-danger,
+#delete-are-you-sure {
+	background: var(--background-secondary);
+}
+
 @media (max-width: 800px) {
 	.dashboard-recipe {
 		flex-direction: column;
 	}
-	.dashboard-delete-recipe {
+	.dashboard-delete-recipe,
+	.dashboard-delete-batch {
 		max-width: 100%;
 		margin-top: 1rem;
 	}
@@ -98,6 +121,11 @@
 .create-batch-button {
 	background: var(--background);
 	border-radius: 0.5rem;
+	padding: 1rem;
+}
+
+.dashboard-delete-batch {
+	margin: 1rem;
 }
 
 #dashboard-batches-container {
@@ -106,4 +134,15 @@
 	justify-content: center;
 	flex-direction: column;
 	gap: 1rem;
+	margin-bottom: 5rem;
+}
+
+.dashboard-batch {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	padding: 2rem;
+	border-radius: 0.5rem;
+	width: 100%;
+	background: var(--background-secondary);
 }
