--- a/frontend/src/components/dashboard/styles/dashboard.css
+++ b/frontend/src/components/dashboard/styles/dashboard.css
@@ -12,7 +12,8 @@
 	width: 160px;
 }
 
-#dashboard #delete-cancel, #dashboard #delete-confirm {
+#dashboard #delete-cancel,
+#dashboard #delete-confirm {
 	width: 100px;
 }
 
