--- a/frontend/src/components/dashboard/styles/dashboard.css
+++ b/frontend/src/components/dashboard/styles/dashboard.css
@@ -129,6 +129,10 @@
 	margin: 1rem;
 }
 
+.batch-info {
+	padding: 0rem!important;
+}
+
 #dashboard-batches-container {
 	display: flex;
 	align-items: center;
