--- a/frontend/src/components/batch/create/styles/create.css
+++ b/frontend/src/components/batch/create/styles/create.css
@@ -15,10 +15,32 @@
 	gap: 1rem;
 }
 
+@media (max-width: 800px) {
+	#equipment-container {
+		flex-direction: column;
+	}
+
+	.error-message {
+		text-align: center;
+	}
+}
+
+.error-message {
+	color: var(--danger);
+	font-weight: bold;
+}
+
 #create-batch-stage-label {
 	font-weight: bold;
 }
 
-#create-batch-stage-container > * {
+.bold-and-bigger {
+	font-weight: bold;
 	font-size: 1.2rem;
+}
+
+input[type="datetime-local"], select {
+	border: 1px solid var(--highlight);
+	padding: 1rem;
+	color: white !important;
 }
