--- a/frontend/src/components/batch/create/styles/create.css
+++ b/frontend/src/components/batch/create/styles/create.css
@@ -39,8 +39,34 @@
 	font-size: 1.2rem;
 }
 
-input[type="datetime-local"], select {
+input[type="datetime-local"],
+select {
 	border: 1px solid var(--highlight);
 	padding: 1rem;
 	color: white !important;
 }
+
+/* Hide the default arrow icon */
+input[type="datetime-local"]::-webkit-calendar-picsker-indicator,
+input[type="datetime-local"]::-webkit-inner-spin-button {
+	width: 100px;
+	height: 100px;
+}
+
+/* Style the wrapper element */
+.datetime-wrapper {
+	position: relative;
+}
+
+/* Position the custom icon */
+.datetime-wrapper .custom-icon {
+	position: absolute;
+	left: 235px;
+	top: 50%;
+	transform: translateY(-50%);
+	cursor: pointer;
+	font-size: 18px;
+	pointer-events: none;
+
+}
+
