--- a/frontend/src/components/dashboard/styles/dashboard.css
+++ b/frontend/src/components/dashboard/styles/dashboard.css
@@ -69,7 +69,7 @@
 .dashboard-batch-gravity,
 .dashboard-batch-recipeid {
 	position: relative;
-	padding-left: 1rem!important;
+	padding-left: 1rem !important;
 }
 
 .dashboard-recipe-yeast::before,
@@ -85,7 +85,7 @@
 }
 
 .batch-container {
-	padding: 0rem!important;
+	padding: 0rem !important;
 }
 
 .batch-info > * {
@@ -97,7 +97,7 @@
 .batch-info {
 	display: flex;
 	flex-direction: column;
-	gap: 1rem!important;
+	gap: 1rem !important;
 	margin-top: 1rem;
 }
 
@@ -123,8 +123,15 @@
 }
 
 @media (max-width: 800px) {
-	.dashboard-recipe {
+	.dashboard-recipe,
+	.dashboard-batch {
 		flex-direction: column;
+	}
+	.dashboard-batch {
+		width: auto!important;
+		max-width: 100%;
+		margin-left :1rem;
+		margin-right: 1rem;
 	}
 	.dashboard-delete-recipe,
 	.dashboard-delete-batch {
@@ -153,7 +160,7 @@
 }
 
 .batch-info {
-	padding: 0rem!important;
+	padding: 0rem !important;
 }
 
 .bigger {
