--- a/frontend/src/components/homepage/styles/homepage.css
+++ b/frontend/src/components/homepage/styles/homepage.css
@@ -5,6 +5,7 @@
 	flex-direction: column;
 	margin-top: 2rem;
 	gap: 1rem;
+    text-align: center;
 }
 
 html,
@@ -58,4 +59,10 @@ body {
 ul > *
  {
 	margin-bottom: 1.5rem;
+}
+
+#welcome > ul > div:nth-child(2) {
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
