--- a/frontend/src/components/batch/view/styles/view.css
+++ b/frontend/src/components/batch/view/styles/view.css
@@ -79,3 +79,7 @@
 .delete-update-container > * {
 	background-color: var(--background-secondary);
 }
+
+#update-batch-form-container {
+	padding: 1rem;
+}
