--- a/frontend/src/global_styles/index.css
+++ b/frontend/src/global_styles/index.css
@@ -23,5 +23,5 @@ body {
 	padding: 0;
 	background: var(--background);
 	color: white;
-	font-family:sans-serif;
+	font-family:Arial, Helvetica, sans-serif ;
 }
