--- a/frontend/src/components/calculator/styles/calculator.css
+++ b/frontend/src/components/calculator/styles/calculator.css
@@ -12,7 +12,7 @@
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
-    font-size: 1.2rem;
+	font-size: 1.2rem;
 }
 
 #calculator-title {
@@ -47,4 +47,5 @@
 
 #subtext {
 	margin-top: 1rem;
+	text-align: center;
 }
