--- a/frontend/src/global_styles/index.css
+++ b/frontend/src/global_styles/index.css
@@ -23,5 +23,11 @@ body {
 	padding: 0;
 	background: var(--background);
 	color: white;
-	font-family:Arial, Helvetica, sans-serif ;
+	font-family: Arial, Helvetica, sans-serif;
+}
+
+.w-md-editor-toolbar,
+.wmde-markdown,
+.wmde-markdown-color {
+	background: var(--background-secondary) !important;
 }
