--- a/frontend/src/components/sign-in/styles/sign-in-page.css
+++ b/frontend/src/components/sign-in/styles/sign-in-page.css
@@ -1,17 +1,20 @@
-#root > div:nth-child(2) > div > div > span {
+#sign-in-page-container > div:nth-child(2) > div > span {
 	background: none;
 }
 
+
+
 #sign-in-page-container {
+	margin-top: 2rem;
 	display: flex;
 	align-items: center;
 	justify-content: center;
 	flex-direction: column;
-    height: 100%;
+	height: 100%;
 }
 
 #sign-in-page-title {
 	font-size: 1.5rem;
-    font-weight: bold;
+	font-weight: bold;
 	margin-bottom: 1rem;
 }
