fixed weird styling on /recipe/create on mobile

--- a/frontend/src/components/recipe/create/styles/containers.css
+++ b/frontend/src/components/recipe/create/styles/containers.css
@@ -52,8 +52,23 @@
 	#liquids-container,
 	#yeast-container,
 	#honey-container,
-	#addons-container {
+	#addons-container,
+	#chemicals-container {
 		flex-direction: column;
+	}
+	#create-form > div {
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		flex-direction: column;
+	}
+	#create-form,
+	#create-form > div
+	 {	
+		align-items: center;
+	}
+	h3 {
+		margin-left: 0rem!important;
 	}
 }
 
